# accounting-helper-service

./: .env.example  .gitignore  pyproject.toml  requirements.txt
.github/scripts/: make_card.py
.github/workflows/: deploy.yml
account-helper-service/: .gitignore  README.md  requirements.txt
account-helper-service/app/: main.py
account-helper-service/app/api/: po_callback.py
account-helper-service/app/bot/handlers/: default_handler.py
account-helper-service/app/core/: config.py
account-helper-service/app/db/: crud.py  database.py  models.py
account-helper-service/app/services/: redis_client.py
account-helper-service/app/static/webapp/: app.js  style.css
app/: main.py
app/api/: auth.py  po_callback.py  telegram.py  webapp.py  webapp_api.py
app/bot/: handlers.py  router.py
app/bot/handlers/: callback_handler.py  default_handler.py  edit_handler.py  forward_handler.py  po_handler.py
app/bot/keyboards/: po_keyboard.py
app/bot/parsers/: po_parser.py
app/core/: config.py  security.py
app/db/: crud.py  models.py
app/schemas/: po.py
app/services/: edit_state.py  github_client.py  llm_client.py  po_dispatch.py  redis_client.py  telegram_client.py
app/static/webapp/: app.js  index.html  style.css
app/utils/: otp.py
