[project]
name = "accounting-helper-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastapi-cli>=0.0.29",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv]
package = false

[tool.fastapi]
entrypoint = "app.main:app"