[project]
name = "accounting-helper-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "fastapi-cli>=0.0.29",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "httpx>=0.27.0",
    "redis>=5.0.0",
    "sqlalchemy>=2.0.30",
    "asyncpg>=0.29.0",
    "pyjwt>=2.13.0",
]

[tool.uv]
package = false

[tool.fastapi]
entrypoint = "app.main:app"